--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@
    ========================================= */
 @font-face {
     font-family: 'HeaderFont';
-    src: url('FONTS/Winter Draw.ttf') format('truetype');
+    src: url('Winter Draw.ttf') format('truetype');
 }
 @font-face {
     font-family: 'MessageFont';
-    src: url('FONTS/KIN668.TTF') format('truetype');
+    src: url('KIN668.TTF') format('truetype');
 }
 @font-face {
     font-family: 'ButtonFont';
-    src: url('FONTS/CHERL___.TTF') format('truetype');
+    src: url('CHERL___.TTF') format('truetype');
 }
 
 /* =========================================
@@ -190,3 +190,4 @@ button:hover {
     background-color: #8e9499;
     font-size: 1.1rem;
 }
+
